<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent><!-- ＠用途說明1: Inherit defaults from Spring Boot -->
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.cha103g5</groupId>
	<artifactId>CHA103G5</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>CHA103G5</name>
	<description>CHA103G5</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<java.version>17</java.version>
	</properties>

	<dependencies>

		<dependency> <!-- ＠用途說明2: Add typical dependencies for a web application -->
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency> <!-- ＠用途說明3: marked the embedded servlet container asprovided -->
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		
		<dependency><!-- ＠用途說明4: test -->
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>


		<!-- 用途說明5: Starter for using Spring Data JPA with Hibernate -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!-- 用途說明6: for log4j.properties -->
		<!-- Spring Boot日誌系統預設是使用logback -->
		<!-- 對於習慣了log4j的開發者，Spring Boot依然有很好的支援 -->
		<!-- 不過我們在引入log4j之前，需要先排除該logback jar的依賴，再引入log4j的依賴，如下所示: -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
			<version>2.7.0</version>
		</dependency>
		
		<!-- 添加 Spring Data JPA 起始套件，用於 Java 持久層操作 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>
		
		<!-- 添加 H2 數據庫，主要用於測試環境 -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!--
		========================================================================================== -->
		<!-- ●前面的jpa已經包含有hibernate，以下為純 hibernate 使用● -->

		<!-- hibernate-core 核心 -->  <!--
		spring-boot-starter-data-jpa(2.7.0) 已內建 Hibernate 5.6.9 依賴，但預設未下載 -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>5.6.15.Final</version>
		</dependency>

		<!-- hibernate-c3p0 連線池 -->                          <!-- spring-boot
		已內建依賴，但預設未下載 -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-c3p0</artifactId>
			<!-- <version>5.6.9.Final</version> -->
		</dependency>

		<!-- hibernate-proxool 連線池 -->                       <!--
		spring-boot 已內建依賴，但預設未下載 -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-proxool</artifactId>
			<!-- <version>5.6.9.Final</version> -->
		</dependency>


		<!--
		========================================================================================== -->
		<!-- ●以下為 Web App 預備使用● -->

		<!-- Servlet 4.0.1 -->                                <!--
		spring-boot 已內建 Servlet 4.0.1 依賴，但預設未下載 -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>4.0.1</version>
			<scope>provided</scope> <!-- ※provided只提供編譯，jar檔不匯出 -->
		</dependency>


		<!-- JSTL -->                                         <!-- spring-boot 未內建依賴 -->
		<dependency>
			<groupId>org.apache.taglibs</groupId>
			<artifactId>taglibs-standard-impl</artifactId>
			<version>1.2.5</version>
		</dependency>

		<!-- JSTL -->                                         <!-- spring-boot 未內建依賴 -->
		<dependency>
			<groupId>org.apache.taglibs</groupId>
			<artifactId>taglibs-standard-spec</artifactId>
			<version>1.2.5</version>
		</dependency>

		<!-- websocket -->                                    <!-- spring-boot
		已內建依賴，但預設未下載 -->
		<dependency>
			<groupId>javax.websocket</groupId>
			<artifactId>javax.websocket-api</artifactId>
			<version>1.1</version>
			<scope>provided</scope> <!-- ※provided只提供編譯，jar檔不匯出 -->
		</dependency>

		<!-- javax.json -->                                   <!-- spring-boot 未內建依賴 -->
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.json</artifactId>
			<version>1.1.4</version>
		</dependency>

		<!-- com.sun.mail -->                                 <!-- spring-boot 未內建依賴 -->
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.2</version>
		</dependency>


		<!--
		========================================================================================== -->
		<!-- ●以下為 JSR 303/349/380 Bean Validation Framework 預備使用● -->

		<!-- javax.validation -->                             <!-- spring-boot(2.7.0)
		已內建依賴，但預設未下載 -->
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<!-- <version>2.0.1.Final</version> -->
		</dependency>

		<!-- org.hibernate.validator -->                      <!--
		spring-boot(2.7.0) 已內建依賴，但預設未下載 -->
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
			<!-- <version>6.2.3.Final</version> -->
		</dependency>

		<!--
		========================================================================================== -->
		<!-- ●以下為 資料庫驅動程式 預備使用● -->

		<!-- Oracle JDBC驅動程式 ojdbc8.jar -->
		<!-- Oracle JDBC Driver compatible with JDK8, JDK11, JDK12, JDK13, JDK14
		and JDK15 -->
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc8</artifactId>
			<!-- <version>21.5.0.0</version> -->              <!-- spring-boot(2.7.0)
			已內建依賴21.5.0.0，但預設未下載 -->
		</dependency>

		<!-- MySQL8 JDBC驅動程式 mysql-connector-java-8.x.xx.jar -->
		<!-- MySQL Connector/J -->


		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
		<dependency> <!-- spring-boot(2.7.0) 已內建依賴8.029，但預設未下載 -->
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>8.0.33</version>
		</dependency>

		<!--
		========================================================================================== -->
		<!-- ●以下為 thymeleaf 預備使用● -->

		<!-- thymeleaf -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>nz.net.ultraq.thymeleaf</groupId>
			<artifactId>thymeleaf-layout-dialect</artifactId>
		</dependency>

		<!-- hot swapping, disable cache for template, enable live reload -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- Optional, for bootstrap -->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>bootstrap</artifactId>
			<version>4.2.1</version>
		</dependency>


		<!--
		========================================================================================== -->
		<!-- ●以下為 lombok 預備使用● -->

		<!-- lombok -->  <!-- spring-boot
		已內建依賴，但預設未下載 -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope> <!-- ※provided只提供編譯，jar檔不匯出 -->
		</dependency>


		<!--
		========================================================================================== -->
		<!-- ●以下為 Gson 預備使用● -->

		<!-- Gson -->   <!-- spring-boot
		已內建依賴，但預設未下載 -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.14.0</version>
		</dependency>

		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>javax.persistence-api</artifactId>
			<version>2.2</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>javax.servlet.jsp-api</artifactId>
			<version>2.3.3</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.glassfish.web</groupId>
			<artifactId>javax.servlet.jsp.jstl</artifactId>
			<version>1.2.5</version>
			<exclusions>
				<exclusion>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.servlet.jsp</groupId>
					<artifactId>jsp-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>


		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>5.0.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-pool2</artifactId>
			<version>2.12.0</version>
		</dependency>


	</dependencies>

	<build>
		<pluginManagement><!-- lock down plugins versions to avoid using Maven
			defaults (maybe moved to parent pom) -->
			<plugins>

				<plugin><!-- ＠用途說明: Package as an executable jar/war -->
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
				</plugin>
				<!-- clean lifecycle, see
				https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<!-- default lifecycle, jar packaging: see
				https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<!-- site lifecycle, see
				https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>

</project>

